--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -7,6 +7,8 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
+        <Frame NavigationUIVisibility="Hidden"
+               Content="{Binding PageSource}"></Frame>
 
     </Grid>
 </Window>
