--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -7,6 +7,9 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
+        <Grid.Background>
+            <ImageBrush ImageSource="/Resources/Gradient.png"/>
+        </Grid.Background>
 
     </Grid>
 </Window>
