--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -12,6 +12,14 @@
         </Grid.Background>
         <Frame NavigationUIVisibility="Hidden"
                Content="{Binding PageSource}"></Frame>
+        <Grid>
+            <Grid.Background>
+                <ImageBrush ImageSource="/Resources/Gradient.png"/>
 
+            </Grid.Background>
+            <Grid.Effect>
+                <BlurEffect Radius="30"/>
+            </Grid.Effect>
+        </Grid>
     </Grid>
 </Window>
