--- a/Views/StartPageView.xaml
+++ b/Views/StartPageView.xaml
@@ -5,10 +5,42 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Melista.Views"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="1080" d:DesignWidth="1920"
       Title="StartPageView">
 
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="120"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Grid Grid.RowSpan="2">
+            <Grid.Background>
+                <ImageBrush ImageSource="/Resources/Gradient.png"/>
+            </Grid.Background>
+            <Grid.Effect>
+                <BlurEffect Radius="30"/>
+            </Grid.Effect>
+            <Grid Background="White" Opacity="0.2"></Grid>
+        </Grid>
+        <Border Opacity="0.6" Width="1740" Height="100" VerticalAlignment="Bottom" CornerRadius="50">
+            <Border.Background>
+                <LinearGradientBrush EndPoint="1,1" StartPoint="0,0">
+                    <GradientStop Color="#FF292929"/>
+                    <GradientStop Color="Black" Offset="0.4"/>
+                    <GradientStop Color="#FF292929" Offset="1"/>
+                    <GradientStop Color="Black" Offset="0.7"/>
+                </LinearGradientBrush>
+            </Border.Background>
+            <StackPanel>
+
+            </StackPanel>
+        </Border>
+
+        <Border Grid.Row="1" VerticalAlignment="Bottom" Height="900" Width="1660" CornerRadius="20 20 0 0">
+            <Border.Background>
+                <SolidColorBrush Color="Black" Opacity="0.6"></SolidColorBrush>
+            </Border.Background>
+            <ListView Margin="30 30 30 0" Background="Transparent"></ListView>
+        </Border>
     </Grid>
 </Page>
