--- a/App.xaml
+++ b/App.xaml
@@ -4,6 +4,8 @@
              xmlns:local="clr-namespace:Melista"
              StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <local:ViewModelLocator x:Key="ViewModelLocator"/>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
