--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:local="clr-namespace:Melista"
         mc:Ignorable="d"
         DataContext="{Binding MainViewModel, Source={StaticResource ViewModelLocator}}"
-        Title="MainWindow" Height="1080" Width="1920">
+        Title="MainWindow" Height="450" Width="800">
     <Grid>
         
         <Border>
@@ -17,9 +17,9 @@
             <Border.Effect>
                 <BlurEffect Radius="20"></BlurEffect>
             </Border.Effect>
+            <Grid Background="White" Opacity="0.13"></Grid>
         </Border>
         <Frame NavigationUIVisibility="Hidden"
                Content="{Binding PageSource}"></Frame>
-        
     </Grid>
 </Window>
