--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -12,14 +12,16 @@
         
         <Border>
             <Border.Background>
-                <ImageBrush ImageSource="/Resources/Gradient.png"/>
+                <ImageBrush ImageSource="/Resources/Images/Dark Theme.png"/>
             </Border.Background>
             <Border.Effect>
-                <BlurEffect Radius="20"></BlurEffect>
+                <BlurEffect Radius="0"></BlurEffect>
             </Border.Effect>
             <Grid Background="White" Opacity="0.13"></Grid>
         </Border>
         <Frame NavigationUIVisibility="Hidden"
                Content="{Binding PageSource}"></Frame>
+
+        <Button Width="170" Height="35" Background="White" Opacity="0.5" Content="123aaa"  FontFamily="/Resources/Fonts/#Montserrat" FontWeight="Light"></Button>
     </Grid>
 </Window>
