--- a/Views/StartPageView.xaml
+++ b/Views/StartPageView.xaml
@@ -26,7 +26,7 @@
                 </LinearGradientBrush>
             </Border.Background>
             <StackPanel>
-
+                <TextBlock Text="Abgba" FontSize="30"></TextBlock>
             </StackPanel>
         </Border>
 
