--- a/Views/StartPageView.xaml
+++ b/Views/StartPageView.xaml
@@ -4,6 +4,7 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Melista.Views"
+      xmlns:dd="clr-namespace:GongSolutions.Wpf.DragDrop;assembly=GongSolutions.Wpf.DragDrop"
       xmlns:viewmodels="clr-namespace:Melista.ViewModels" xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks" xmlns:local1="clr-namespace:Melista"
       DataContext="{Binding StartPageViewModel, Source={StaticResource ViewModelLocator}}"
       mc:Ignorable="d" 
@@ -16,16 +17,27 @@
             <RowDefinition Height="337*"/>
             <RowDefinition Height="60"/>
         </Grid.RowDefinitions>
-
+        
         <Border Style="{DynamicResource SearchPanel}" CornerRadius="30" Height="50" Margin="40,0,40,0" VerticalAlignment="Center">
             <Grid>
-                <local1:PlaceHolderTextBox PlaceHolderText="rrr"></local1:PlaceHolderTextBox>
+                <local1:PlaceHolderTextBox PlaceHolderText="rrr"
+                                           Background="Transparent"
+                                           BorderBrush="Transparent"
+                                           Foreground="Black"
+                                           FontFamily="{StaticResource Font}"
+                                           FontSize="30"
+                                           Margin="8 4 0 0"></local1:PlaceHolderTextBox>
+                
                 
             </Grid>
         </Border>
 
         <Border Style="{DynamicResource FilePanel}" Grid.Row="1" Margin="70,10,70,0" Grid.RowSpan="2" >
-            <ListView Margin="10 10 10 0" Background="Transparent"></ListView>
+            <ListView Margin="10 10 10 0" Background="Transparent"
+                      ItemsSource="{Binding Medias}"
+                      dd:DragDrop.IsDropTarget="True"
+                      dd:DragDrop.DropHandler="{Binding}"
+                      ></ListView>
         </Border>
 
         <Grid Style="{DynamicResource BottomPanel}" Grid.Row="2">
