--- a/Views/StartPageView.xaml
+++ b/Views/StartPageView.xaml
@@ -31,7 +31,12 @@
         <Grid Style="{DynamicResource BottomPanel}" Grid.Row="2">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                 <Button Style="{DynamicResource ButtonOne}" Grid.Row="1" Height="40" Width="200" Content="История" Margin="0 0 40 0"/>
-                <Button Style="{DynamicResource ButtonOne}" Grid.Row="1" Height="40" Width="200" Content="Загрузить"/>
+                <Button Style="{DynamicResource ButtonOne}" 
+                        Grid.Row="1" 
+                        Height="40" 
+                        Width="200" 
+                        Content="Загрузить"
+                        Command="{Binding LoadNewFileCommand, IsAsync=True}"/>
             </StackPanel>
         </Grid>
 
