--- a/Styles/DarkTheme.xaml
+++ b/Styles/DarkTheme.xaml
@@ -12,6 +12,12 @@
         <Setter Property="FontFamily" Value="{StaticResource Font}"/>
         <Setter Property="FontWeight" Value="Light"/>
     </Style>
+    <Style x:Key="TextStyle2" TargetType="TextBlock">
+        <Setter Property="Foreground" Value="#414141"/>
+        <Setter Property="FontFamily" Value="{StaticResource Font}"/>
+        <Setter Property="FontWeight" Value="Bold"/>
+        <Setter Property="FontSize" Value="14"/>
+    </Style>
     <Style x:Key="SearchPanel" TargetType="Border">
         <Setter Property="Background">
             <Setter.Value>
@@ -129,5 +135,26 @@
                 
             </Trigger>
         </Style.Triggers>
+    </Style>
+
+    <Style x:Key="ListViewItems" TargetType="ListView">
+        <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="ItemTemplate">
+            <Setter.Value>
+                <DataTemplate>
+                    <Border Background="#414141" CornerRadius="16" Height="120" Width="171">
+                        <StackPanel>
+                            <Border CornerRadius="16" Width="171" Height="96">
+                                <Border.Background>
+                                    <ImageBrush  ImageSource="/Resources/Dark/Dark Theme.png" Stretch="UniformToFill"/>
+                                </Border.Background>
+                            </Border>
+                            <TextBlock Style="{DynamicResource TextStyle2}" FontSize="8" Margin="6 6 6 0" Text="Billie Eilish - when the party's over"/>
+                        </StackPanel>
+                    </Border>
+                </DataTemplate>
+            </Setter.Value>
+        </Setter>
     </Style>
 </ResourceDictionary>
