--- a/Views/StartPageView.xaml
+++ b/Views/StartPageView.xaml
@@ -36,9 +36,16 @@
         </Border>
 
         <Border Style="{DynamicResource FilePanel}" Grid.Row="1" Margin="70,10,70,0" Grid.RowSpan="2" >
-            <ListView Margin="10 10 10 0" Background="Transparent"></ListView>
+            <ListView Style="{DynamicResource ListViewItems}" Margin="10 10 10 0" >
+                <ListView.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <UniformGrid Columns="3" VerticalAlignment="Top" HorizontalAlignment="Center"/>
+                    </ItemsPanelTemplate>
+                </ListView.ItemsPanel>
+            </ListView>
         </Border>
 
+        
         <Grid Style="{DynamicResource BottomPanel}" Grid.Row="2">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                 <Button Style="{DynamicResource ButtonOne}" Grid.Row="1" Height="40" Width="200" Content="История" Margin="0 0 40 0"/>
