Сделал команду на добавление

--- a/App.xaml
+++ b/App.xaml
@@ -10,7 +10,7 @@
             <FontFamily x:Key="Font">/Resources/Fonts/#Montserrat</FontFamily>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Styles/DarkTheme.xaml"/>
-                <!--<ResourceDictionary Source="Styles/LightTheme.xaml"/>-->
+                <ResourceDictionary Source="Styles/LightTheme.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
